Fix spacing for link to under nav

--- a/src/components/card/card.styles.scss
+++ b/src/components/card/card.styles.scss
@@ -6,6 +6,14 @@
 }
 
 .title {
+  h2::before {
+    display: block;
+    content: " ";
+    margin-top: -100px;
+    height: 100px;
+    visibility: hidden;
+    pointer-events: none;
+  }
   h2 {
     font-size: 36px;
     margin: 0 0 40px 0;
