--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
 body {
+  padding-top: 55px;
   margin: 0 auto;
-  font-family: "Lato", sans-serif;
   line-height: 1.5;
-  color: #555;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -16,4 +15,9 @@ h6,
 strong {
   font-family: "Oswald", sans-serif;
   color: #333;
+}
+
+p {
+  font-family: "Lato", sans-serif;
+  color: #555;
 }
